--- a/src/assets/layout/_responsive.scss
+++ b/src/assets/layout/_responsive.scss
@@ -77,8 +77,8 @@
         .layout-sidebar {
             transform: translateX(-100%);
             left: 0 !important;
-            top: 0;
-            height: 100vh;
+            top: 0 !important;
+            height: 100vh !important;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
             width: 20rem;
